// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withUpdating snapshots normal state 1`] = `
<Component
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Component />
</Component>
`;

exports[`withUpdating snapshots updating state 1`] = `
<Component
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Component />
  <LoadingMask
    style={
      Object {
        "opacity": 0.8,
      }
    }
  />
</Component>
`;
